# jn-server-cc

./: CMakeLists.txt  Makefile
common/: StreamProtobuf.h  commons.h
ice-qjournal-protocol/: .cproject  .project  Client.cpp  QJournalProtocol.pb.cc  QJournalProtocol.pb.h  QJournalProtocolPB.cpp  QJournalProtocolPB.h  QJournalProtocolPB.ice  QJournalProtocolServerSideTranslatorPB.cpp  QJournalProtocolServerSideTranslatorPB.h  client  config.client  hdfs.pb.cc  hdfs.pb.h
ice-qjournal-protocol/java/org/apache/hadoop/ice/qjournal/ProtocolPB/: QJournalProtocolServerSideTranslatorPB.java
ice-rpc-cc/: .cproject  .project
ice-rpc-cc/src/: Server.cc  Server.h  server
src/: EditLogFile.cpp  EditLogFile.h  FileJournalManager.cpp  FileJournalManager.h  JNClientInputStream.cpp  JNClientInputStream.h  JNClientOutputStream.cpp  JNClientOutputStream.h  JNServerErrorCodes.h  JNStorage.cpp  JNStorage.h  Journal.cpp  Journal.h  JournalNode.cpp  JournalNode.h  JournalNodeHttpServer.cpp  JournalNodeHttpServer.h  JournalNodeRpcServer.cpp  JournalNodeRpcServer.h  QjournalProtocol.h  TestJNClientOutputStream.cpp  TestJNClientOutputStream.h
test/: TestJournal.cpp  TestJournalNode.cpp
util/: BestEffortLongFile.h  Constants.h  JNServiceMiscUtils.cpp  JNServiceMiscUtils.h  JournalNodeConfigKeys.h  Logger.cpp  Logger.h  NamespaceInfo.h  PersistentLongFile.h  RequestInfo.h  StorageInfo.h  persistenttest.cc
